k8s-test/envoy.yaml
node:
    id: test
    cluster: test
admin:
    access_log_path: /tmp/admin_access.log
    address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
    listeners:
        - name: test
          address:
              socket_address:
                  protocol: TCP
                  address: 127.0.0.1
                  port_value: 10000
          listener_filters:
              - name: "envoy.listener.tls_inspector"
                typed_config: {}
          filter_chains:
              - transport_socket:
                    name: "envoy.transport_sockets.tls"
                    typed_config:
                        "@type": "type.googleapis.com/envoy.api.v2.auth.DownstreamTlsContext"
                        common_tls_context:
                            alpn_protocols: ["h2", "http/1.1"]
                            tls_certificate_sds_secret_configs:
                                sds_config:
                                    path: /etc/envoy/sds.yaml
                filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                          stat_prefix: test
                          route_config:
                              virtual_hosts:
                                  - name: test
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/" }
                                          direct_response:
                                              status: 200
                                              body:
                                                  inline_string: "Hello from Envoy"
                          http_filters:
                              - name: envoy.router
